<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.view.fragment.Detallesfragment"
    android:layout_margin="15sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FGDet_cau"
        android:textColor="@color/gris"
        />

    <EditText
        android:id="@+id/etCAU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="CAU (Código Autoconsumo)"
        android:layout_marginBottom="15sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FGDet_estado_solicitud"
        android:textColor="@color/gris"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="CAU (Código Autoconsumo)"
            android:layout_marginBottom="15sp"
            />

        <ImageView
            android:id="@+id/btnInformation"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:src="@drawable/informacion" />
    </FrameLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FGDet_tipo_autoconsumo"
        android:textColor="@color/gris"
        />

    <EditText
        android:id="@+id/etAutoConsumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="CAU (Código Autoconsumo)"
        android:layout_marginBottom="15sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FGDet_comprobacion_de_excedentes"
        android:textColor="@color/gris"
        />

    <EditText
        android:id="@+id/etExcedentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="CAU (Código Autoconsumo)"
        android:layout_marginBottom="15sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FGDet_potencia_de_instalacion"
        android:textColor="@color/gris"
        />

    <EditText
        android:id="@+id/etPotencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="CAU (Código Autoconsumo)"
        android:layout_marginBottom="15sp"
        />

</LinearLayout>